# mlx-sparse

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: accelerate.yaml  ci.yml  publish.yaml
benchmarks/: bench_chebyshev_preconditioner.py  bench_csr_matmul.py  bench_csr_matvec.py  bench_gmres_suitesparse_normal_equations.py  bench_ilu0_preconditioner.py  bench_jacobi_pcg_validation.py  bench_linalg_factorizations.py  bench_linalg_solvers.py  bench_linalg_spectral.py  bench_mixed_format_matmul.py  bench_native_cpu_direct_solvers.py  bench_native_cpu_repeated_solves.py  bench_native_cpu_sparse_ops.py  bench_preconditioner_validation_matrix.py  bench_readme_cg_cpu.py  bench_reductions.py  bench_sparse_kron.py  bench_structural_constructors.py  bench_triangular_analysis.py  benchmark_utils.py
docs/: changelog.rst  conf.py  index.rst  installation.rst  performance.rst  quickstart.rst  requirements.txt  supported.rst
docs/_static/: custom.css
docs/api/: configuration.rst  constructors.rst  containers.rst  device.rst  index.rst  linalg.rst  operations.rst  random.rst  runtime.rst
docs/notebooks/: 01_first_steps.ipynb  02_csr_matvec.ipynb  03_csr_matmul.ipynb  04_constructors.ipynb  05_sparse_sparse.ipynb  06_autodiff.ipynb  07_dtype_device.ipynb  08_canonicalization.ipynb  09_scipy_bridge.ipynb  10_benchmarks.ipynb  11_graph_algorithms.ipynb  12_neural_layers.ipynb  13_linalg_solvers.ipynb  14_linalg_factorizations.ipynb  15_linalg_spectral.ipynb  16_linalg_operators.ipynb  18_csc_format.ipynb  19_accelerate_square_solvers.ipynb  20_accelerate_rectangular_solvers.ipynb  21_preconditioner_identity.ipynb  22_preconditioner_diagonal.ipynb  23_preconditioner_jacobi.ipynb  24_preconditioner_ilu0.ipynb  25_preconditioner_ichol0.ipynb  26_preconditioner_chebyshev.ipynb  27_preconditioner_exact.ipynb  28_preconditioner_callable.ipynb  index.rst
docs/parallelism/: execution_model.rst  index.rst  performance_results.rst
docs/tutorials/: finite_difference.rst  getting_started.rst  graph_laplacian.rst  index.rst  physics_workloads.rst  scipy_interop.rst  sparse_linear_systems.rst
docs/user_guide/: autodiff.rst  device_execution.rst  dtype_policy.rst  index.rst  linalg.rst  linalg_solvers.rst  preconditioners.rst  random.rst  sparse_formats.rst  structural.rst  validation.rst
examples/: finite_difference_2d.py  graph_laplacian.py  quantum_hamiltonian.py  sparse_linear_layer.py
mlx_sparse/: __init__.py  _capabilities.py  _config.py  _construct.py  _coo.py  _csc.py  _csr.py  _device.py  _ext_loader.py  _fallback.py  _host.py  _native.py  _ops.py  _typing.py  _validation.py  runtime.py
mlx_sparse/linalg/: __init__.py  _eigen.py  _factorizations.py  _interface.py  _iterative.py  _sparse_ops.py  _triangular.py  _utils.py  preconditioners.py
mlx_sparse/linalg/utils/: __init__.py  arrays.py  bicgstab.py  factorization.py  gmres.py  iterative.py  matrix_free.py  operators.py  preconditioners.py  sparse.py  spectral.py
mlx_sparse/random/: __init__.py  _validation.py
src/: bindings.cpp
src/common/: autodiff.h  common.cpp  common.h  cpu_parallel.cpp  cpu_parallel.h  vmap.h
src/linalg/: linalg.h
src/linalg/accelerate/: accelerate_csc_adapter.cpp  accelerate_csc_adapter.h  accelerate_errors.cpp
src/linalg/arnoldi/: arnoldi.cpp  arnoldi.h  arnoldi.metal
src/linalg/bicgstab/: bicgstab.cpp  bicgstab.h  bicgstab.metal
src/linalg/cg/: cg.cpp  cg.h  cg.metal
src/linalg/cholesky/: cholesky.cpp  cholesky.h
src/linalg/common/: common.h  metal_common.h
src/linalg/eigs/: eigs.cpp  eigs.h
src/linalg/eigsh/: eigsh.cpp  eigsh.h
src/linalg/gmres/: gmres.cpp  gmres.h
src/linalg/inner_product/: inner_product.cpp  inner_product.h  inner_product.metal
src/linalg/lanczos/: lanczos.cpp  lanczos.h  lanczos.metal
src/linalg/lu/: lu.cpp  lu.h
src/linalg/minres/: minres.cpp  minres.h  minres.metal
src/linalg/permute_vector/: permute_vector.cpp  permute_vector.h  permute_vector.metal
src/linalg/svds/: svds.cpp  svds.h  svds.metal
src/linalg/triangular_solve/: triangular_solve.cpp  triangular_solve.h  triangular_solve.metal
src/preconditioners/bicgstab/: bicgstab.cpp  bicgstab.h  bicgstab.metal
src/preconditioners/chebyshev/: chebyshev.cpp  chebyshev.h  chebyshev.metal
src/preconditioners/diagonal/: diagonal.cpp  diagonal.h  diagonal.metal
src/preconditioners/exact/: exact.cpp  exact.h
src/random/: common.cpp  common.h  common.metal  compressed.cpp  compressed.metal  coo.cpp  coo.metal  csc.cpp  csr.cpp  keys.cpp  random.h  random_metal.h
src/sparse/: common.cpp  coo_tocsr.cpp  coo_tocsr.metal  csr_linalg.cpp  csr_linalg.h  csr_linalg.metal  csr_matmul.cpp  csr_matmul.h  csr_matmul.metal  csr_matvec.cpp  csr_matvec.h  csr_matvec.metal  csr_sort_indices.cpp  csr_sort_indices.metal  csr_todense.cpp  csr_todense.metal  csr_transpose.cpp  csr_transpose.h  csr_transpose.metal  identity_like.cpp  identity_like.h  metal_common.h
tests/: conftest.py  test_accelerate_csc_adapter.py  test_accelerate_direct_solvers.py  test_accelerate_errors.py  test_accelerate_factorization_wrappers.py  test_benchmark_utils.py  test_capabilities.py  test_config.py  test_constructor_edge_cases.py  test_constructors.py  test_conversion_api.py  test_coo_csc_dense_products.py  test_coo_csc_reductions.py  test_coo_tocsr.py  test_cpu_gpu_parity.py  test_cpu_host_assembly.py  test_cpu_parallel_remaining.py  test_csc.py  test_csr_matmul.py  test_csr_matvec.py  test_csr_properties.py  test_csr_reductions.py  test_csr_todense.py  test_device_api.py  test_direct_solver_benchmarks.py  test_docs_preconditioner_notebooks.py  test_dtypes.py  test_fallback_dispatch.py  test_fallback_validation_regressions.py  test_gmres_suitesparse_benchmark.py  test_grad.py  test_host_utils_extended.py  test_importless_error_paths.py  test_imports.py  test_jacobi_pcg_benchmarks.py  test_linalg_bicgstab.py  test_linalg_completeness.py  test_linalg_contract.py  test_linalg_direct_factorizations.py  test_linalg_errors.py  (+30 more)
(+206 files in other folders)
